tests/paczka1/small_fuzzy/61913041.err
Error in line 3: nav2PTVSTL S176 75,9
Error in line 7: nav2PTVSTL S381 1,9
Error in line 12: nav2PTVSTL A954 146,81
Error in line 11: nav2PTVSTL A954 65,8
